3-2 更改数据库为开发数据库 wikidev

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     druid:
-      url: jdbc:mysql://rm-7xv9h5685p98j9642mo.mysql.rds.aliyuncs.com:3306/wiki
-      username: wiki
+      url: jdbc:mysql://rm-7xv9h5685p98j9642mo.mysql.rds.aliyuncs.com:3306/wikidev
+      username: wikidev
       password: ambitionZCL0
       driver-class-name: com.mysql.cj.jdbc.Driver
 
