3-6 创建 ebook表并使用mybatis-generate 生成持久层代码

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
                 <!--允许覆盖-->
                 <configuration>
                     <overwrite>true</overwrite>
+                    <configurationFile>src/main/resources/generate/generatorConfig.xml</configurationFile>
                 </configuration>
                 <!--插件的依赖-->
                 <dependencies>
