--- a/web/package.json
+++ b/web/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve-dev": "vue-cli-service serve --mode dev",
+    "build-dev": "vue-cli-service build --mode build" ,
+    "serve-prod": "vue-cli-service serve --mode prod",
+    "build-prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
-
-
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.0",
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.0",
     "vue": "^3.2.13",
