--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve-dev": "vue-cli-service serve --mode dev",
+    "serve-dev": "vue-cli-service serve --mode dev --port 8081",
     "build-dev": "vue-cli-service build --mode build" ,
     "serve-prod": "vue-cli-service serve --mode prod",
     "build-prod": "vue-cli-service build --mode prod",
