--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "serve-dev": "vue-cli-service serve --mode dev --port 8081",
-    "build-dev": "vue-cli-service build --mode build" ,
+    "build-dev": "vue-cli-service build --mode build",
     "serve-prod": "vue-cli-service serve --mode prod",
     "build-prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^4.0.3",
     "axios": "^1.5.0",
     "vue": "^3.2.13",
