--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,21 @@ spring:
       username: wikidev
       password: ambitionZCL0
       driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 39.108.215.13
+    database: 0 # Redis数据库索引（默认为0）
+    port: 6379 # Redis服务器连接端口
+    password: ambitionZCL123
+
+    # Redis服务器连接密码（默认为空） 阿里云-云服务器Redis版本 用户名加密码 （我的项目部署到ecs上，使用的是专网域名）
+    timeout: 5000ms # 连接超时时间
+
+    lettuce:
+      pool:
+        max-active: 8        # 连接池最大连接数(使用负值表示没有限制） 默认8
+        max-wait: -1         #连接池最大阻塞等待时间（使用负值表示没有限制） 默认-1
+        max-idle: 8          #连接池最大空闲连接 默认8
+        min-idle: 0          #连接池最小空闲连接 默认 0
 
 druid:
   aop-patterns: edu.scnu.admin.*
@@ -38,3 +53,10 @@ mybatis:
 logging:
   level:
     edu.scnu.wiki.mapper: trace
+
+
+
+
+
+
+
