--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "serve-dev": "vue-cli-service serve --mode dev --port 8081",
     "build-dev": "vue-cli-service build --mode build",
     "serve-prod": "vue-cli-service serve --mode prod",
-    "build-prod": "vue-cli-service build --mode prod",
+    "build-prod": "vue-cli-service build --mode build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
